# telamon

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  index.md
.github/workflows/: ci.yml
docs/: annotated.html  classes.html  dir_490217cac2bf10428da934a9bcb8bfa7.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  pages.html
docs/d0/d30/: md_README.html
docs/d0/d5e/: namespacetelamon__simulator_1_1versioning_1_1telamon__private.html
docs/d0/dd8/: classtelamon__simulator_1_1telamon__private_1_1WaitFreeSimulator.html
docs/d1/d63/: namespacetelamon__simulator.html
docs/d1/d77/: classtelamon__simulator_1_1versioning_1_1VersionedAtomic_3_01ValType_00_01void_01_4-members.html
docs/d1/d8a/: namespacetelamon__simulator_1_1versioning.html
docs/d1/de5/: structtelamon__simulator_1_1versioning_1_1Referenced_3_01ValType_00_01void_01_4-members.html
docs/d1/de6/: classtelamon__simulator_1_1ContentionMeasure-members.html
docs/d3/d00/: classhelpqueue_1_1HelpQueue-members.html
docs/d3/d25/: structtelamon__simulator_1_1versioning_1_1telamon__private_1_1ReferencedBase.html
docs/d3/d3b/: classtelamon__simulator_1_1WaitFreeSimulatorHandle-members.html
docs/d3/d76/: classtelamon__simulator_1_1versioning_1_1VersionedAtomic-members.html
docs/d3/dad/: classtelamon__simulator_1_1telamon__private_1_1WaitFreeSimulator-members.html
docs/d3/dce/: structtelamon__simulator_1_1OperationRecord_1_1ExecutingCas.html
docs/d3/dfc/: structhelpqueue_1_1HelpQueue_1_1Node-members.html
docs/d4/d08/: classtelamon__simulator_1_1ContentionMeasure.html
docs/d4/da1/: classtelamon__simulator_1_1ContentionFailureCounter.html
docs/d4/da9/: WaitFreeSimulator_8hh_source.html
docs/d4/dd6/: structtelamon__simulator_1_1versioning_1_1Referenced.html
docs/d4/dfa/: Versioning_8hh.html  Versioning_8hh_source.html
docs/d5/d60/: classtelamon__simulator_1_1ContentionFailureCounter-members.html
docs/d5/dc6/: classtelamon__simulator_1_1versioning_1_1VersionedAtomic.html
docs/d5/de6/: structhelpqueue_1_1HelpQueue_1_1OperationDescription-members.html
docs/d6/d5e/: structtelamon__simulator_1_1OperationRecord_1_1PreCas-members.html
docs/d6/da8/: structtelamon__simulator_1_1OperationRecord_1_1PostCas.html
docs/d7/d67/: structtelamon__simulator_1_1versioning_1_1telamon__private_1_1ReferencedBase-members.html
docs/d7/dde/: structhelpqueue_1_1HelpQueue_1_1Node.html
docs/d8/d08/: namespacetelamon__simulator_1_1telamon__private.html
docs/d8/d6e/: structhelpqueue_1_1HelpQueue_1_1OperationDescription.html
docs/d8/db0/: structtelamon__simulator_1_1OperationRecord_1_1ExecutingCas-members.html
docs/d8/ded/: NormalizedRepresentation_8hh.html  NormalizedRepresentation_8hh_source.html
docs/d9/d84/: classtelamon__simulator_1_1versioning_1_1VersionedAtomic_3_01ValType_00_01void_01_4.html
docs/d9/db4/: classtelamon__simulator_1_1OperationRecord.html
docs/da/d00/: structtelamon__simulator_1_1OperationRecord_1_1Completed.html
docs/da/d2b/: structtelamon__simulator_1_1versioning_1_1Referenced_3_01ValType_00_01void_01_4.html
docs/da/d85/: structtelamon__simulator_1_1OperationRecord_1_1PostCas-members.html
docs/da/de5/: classtelamon__simulator_1_1OperationRecord-members.html
docs/db/d2b/: structtelamon__simulator_1_1OperationRecord_1_1Completed-members.html  structtelamon__simulator_1_1OperationRecord_1_1PreCas.html
docs/db/dba/: classtelamon__simulator_1_1OperationRecordBox-members.html
docs/db/dc6/: structOverloadedVisitor.html
docs/db/ddf/: HelpQueue_8hh_source.html
docs/dc/d30/: structtelamon__simulator_1_1versioning_1_1Referenced-members.html
docs/dc/d66/: classhelpqueue_1_1HelpQueue.html
docs/dc/d7b/: namespacehelpqueue.html
docs/dd/dfb/: OperationHelping_8hh_source.html
docs/de/dbf/: classtelamon__simulator_1_1WaitFreeSimulatorHandle.html
docs/df/d45/: classtelamon__simulator_1_1OperationRecordBox.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  (+1 more)
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  LockFree.cc  LockFree_gbench.cc  WaitFree.cc  WaitFree_gbench.cc
src/example_client/: CMakeLists.txt
src/example_client/list/: LinkedList.hh  LockFreeLinkedList.hh  NormalizedLinkedList.hh
src/telamon/: CMakeLists.txt  HelpQueue.cc  HelpQueue.hh  NormalizedRepresentation.hh  OperationHelping.hh  Versioning.hh  WaitFreeSimulator.hh  lib.hh
src/tests/: CMakeLists.txt  TestHelpQueue.cc  TestLinkedList.cc  TestNormalizedRepresentation.cc  TestSimulator.cc  TestVersioning.cc  it_works.cc
src/tests/benchmarks/: BenchLockFreeLinkedList.cc  BenchWaitFreeLinkedList.cc
src/tests/samples/: LockFreeLinkedList.hh  NormalizedLinkedList.hh  TestLinkedList.cc  TestNormalizedLinkedList.cc
tools/: build_debug.sh
